@@ -3,21 +3,12 @@ package io.github.magicquartz.everchanging;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import net.fabricmc.api.ClientModInitializer;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.screen.multiplayer.MultiplayerScreen;
-import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.client.network.MultiplayerServerListPinger;
-import net.minecraft.client.option.ServerList;
-import net.minecraft.text.Text;
 
-import javax.swing.text.StringContent;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -43,8 +34,7 @@ public class GistServerConnector implements ClientModInitializer {
             else
                 gistContent = "Incorrect format!";
 
-            String ipAddress = parseServerIpFromGistContent(gistContent);
-            return ipAddress;
+            return parseServerIpFromGistContent(gistContent); //return ipAddress
         } catch (IOException e) {
             e.printStackTrace();
             return "Error fetching gist content!";
@@ -60,7 +50,8 @@ public class GistServerConnector implements ClientModInitializer {
         else
             apiUrl = gistStr;
 
-        URL url = new URL(apiUrl);
+        URI uri = URI.create(apiUrl);
+        URL url = uri.toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
         //connection.setRequestProperty("Authorization", "token " + GITHUB_TOKEN);
